# ma

./: AGENTS.md  README.md  config.example.json  ma.ini  pyproject.toml
agents/data_analyst/: filesystem_tools.py  main.py
agents/deep_research/: main.py
agents/pro_analyst/: filesystem_tools.py  main.py  skill_tools.py
agents/pro_analyst/skills/data_exploration/: skill.md
agents/pro_analyst/skills/docx_document/: skill.md
agents/pro_analyst/skills/markdown_to_pdf/: skill.md
agents/pro_analyst/skills/pptx_presentation/: skill.md
agents/simple/: main.py
agents/wiki-agent/: main.py
docs/: Architecture.md  History.md  UserManual.md
ma/: __init__.py  agent_loader.py  app.py  cli.py  config.py  context.py  runtime.py  session.py  settings.py  stores.py  tools.py
tests/: test_agent_loader.py  test_app.py  test_cli.py  test_config.py  test_data_analyst_tools.py  test_pro_analyst_tools.py  test_session.py  test_settings.py  test_stores.py  test_tools.py  test_wiki_agent.py
