[project]
name = "ma"
version = "0.1.0"
description = "Mitya's Agent: an educational terminal chat for OpenAI Agents SDK on Yandex Cloud"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.2.0",
    "openai>=1.0.0",
    "textual>=0.80.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
ma = "ma.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
